Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • L libinput
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 138
    • Issues 138
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 11
    • Merge requests 11
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Package Registry
    • Container Registry
    • Infrastructure Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • libinput
  • libinput
  • Issues
  • #492

Closed
Open
Created Jun 01, 2020 by George White@galexite

Touchpad cursor jump when using index finger to click (or hold whilst dragging)

Summary

On a Lenovo ThinkPad E465 laptop with an 'AlpsPS/2 ALPS DualPoint TouchPad', resting your index finger to click the button underneath the touchpad and using another finger to control the pointer results in cursor jumps to the very bottom-left of the screen when the stable (i.e. non-moving) index finger is near the bottom-left of the touchpad.

Steps to reproduce

Use two fingers to operate the trackpad, one which remains still to operate the whole-surface click within 20mm of the bottom-left corner, and one to move the pointer around the screen, lifting up this finger to move the propel the cursor top-right.

When the pointer finger lands on the touchpad next, the cursor will jump to the bottom left corner of the screen.

The condition is most exaggerated the nearer the stable finger is to the bottom left of the touchpad, but still occurs with somewhat reduced frequency the further the stable finger is away from this corner.

Required information

  • libinput version: 1.15.5
  • hardware information: Lenovo ThinkPad E465, AlpsPS/2 ALPS DualPoint TouchPad
  • udevadm info /sys/class/input/event8 output attached: udevadm-info.txt
  • /sys/class/dmi/id/modalias reports dmi:bvnLENOVO:bvrR01ET41W(1.21):bd12/20/2017:svnLENOVO:pn20EXS00E00:pvrThinkPadE465:rvnLENOVO:rn20EXS00E00:rvrSDK0J40697WIN:cvnLENOVO:ct10:cvrNotAvailable:
  • touchpad-edge-detector reports correct physical size (97x53mm)
  • libinput record recording attached: libinput-record.yml

edit: simplified recording quite a bit by trying again.

Edited Jun 01, 2020 by George White
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking